--- a/www/index.html
+++ b/www/index.html
@@ -16,9 +16,9 @@
     <script src="lib/ngCordova/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
     <!-- firebase includes -->
-      <!-- firebase includes -->
-      <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-      <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+    <!-- firebase includes -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <!-- <script>
          // Initialize Firebase
          var config = {
@@ -41,7 +41,16 @@
     </script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/app/app-start.ctrl.js"></script>
+    <script src="js/app/intro-slider-ctrl.js"></script>
+    <script src="js/app/underconstruction-ctrl.js"></script>
+    <script src="js/app/update-ctrl.js"></script>
+
+         <script src="js/auth/login-ctrl.js"></script>
+      <script src="js/auth/signup-ctrl.js"></script>
+      <script src="js/auth/logout-ctrl.js"></script>
+  
 </head>
 
 <body ng-app="starter">
