login signup corrected

--- a/www/index.html
+++ b/www/index.html
@@ -46,11 +46,10 @@
     <script src="js/app/intro-slider-ctrl.js"></script>
     <script src="js/app/underconstruction-ctrl.js"></script>
     <script src="js/app/update-ctrl.js"></script>
-
-         <script src="js/auth/login-ctrl.js"></script>
-      <script src="js/auth/signup-ctrl.js"></script>
-      <script src="js/auth/logout-ctrl.js"></script>
-  
+    <script src="js/auth/authentication.service.js"></script>
+    <script src="js/auth/login-ctrl.js"></script>
+    <script src="js/auth/signup-ctrl.js"></script>
+    <script src="js/auth/logout-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
