added home page n side menu without css

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,8 @@
     <script src="js/auth/login-ctrl.js"></script>
     <script src="js/auth/signup-ctrl.js"></script>
     <script src="js/auth/logout-ctrl.js"></script>
+    <script src="js/home/home-ctrl.js"></script>
+    <script src="js/home/app-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
