--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,12 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
+
+    <!-- Directives -->
+    <script src="js/projects/project-rating-directive.js"></script>
+    <script src="js/projects/rating-directive.js"></script>
+
+    <!-- Controllers -->
     <script src="js/app/app-start.ctrl.js"></script>
     <script src="js/app/intro-slider-ctrl.js"></script>
     <script src="js/app/underconstruction-ctrl.js"></script>
@@ -52,6 +58,9 @@
     <script src="js/auth/logout-ctrl.js"></script>
     <script src="js/home/home-ctrl.js"></script>
     <script src="js/home/app-ctrl.js"></script>
+    <script src="js/home/select-location-ctrl.js"></script>
+    <script src="js/home/project-search-ctrl.js"></script>
+    <script src="js/projects/review-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
