added project search

--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,7 @@
     <script src="js/home/home.ctrl.js"></script>
     <script src="js/home/side-menu.ctrl.js"></script>
     <script src="js/home/select-location-ctrl.js"></script>
+    <script src="js/home/project-search-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
