--- a/www/index.html
+++ b/www/index.html
@@ -20,15 +20,15 @@
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <script>
-         // Initialize Firebase
-         // var config = {
-         //    apiKey: "AIzaSyD_4bPp5HKryXDzaQwfRhqAU5SsSAdDIJ0",
-         //    authDomain: "roofpik-948d0.firebaseapp.com",
-         //    databaseURL: "https://roofpik-948d0.firebaseio.com",
-         //    storageBucket: "roofpik-948d0.appspot.com",
-         // };
-         // firebase.initializeApp(config);
-      </script>
+    // Initialize Firebase
+    // var config = {
+    //    apiKey: "AIzaSyD_4bPp5HKryXDzaQwfRhqAU5SsSAdDIJ0",
+    //    authDomain: "roofpik-948d0.firebaseapp.com",
+    //    databaseURL: "https://roofpik-948d0.firebaseio.com",
+    //    storageBucket: "roofpik-948d0.appspot.com",
+    // };
+    // firebase.initializeApp(config);
+    </script>
     <script>
     // Initialize Firebase
     var config = {
@@ -42,13 +42,13 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
-
     <!-- Controllers -->
     <script src="js/app/app-start.ctrl.js"></script>
     <script src="js/app/app-landing.ctrl.js"></script>
     <script src="js/app/intro-slider-ctrl.js"></script>
     <script src="js/app/under-construction-ctrl.js"></script>
     <script src="js/app/app-update-ctrl.js"></script>
+    <script src="js/app/network.ctrl.js"></script>
     <script src="js/auth/authentication.service.js"></script>
     <script src="js/auth/login-ctrl.js"></script>
     <script src="js/auth/signup-ctrl.js"></script>
