--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,11 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
+
+    <!-- Directives -->
+    <script src="js/projects/project-rating-directive.js"></script>
+    <script src="js/projects/rating-directive.js"></script>
+
     <!-- Controllers -->
     <script src="js/app/app-start.ctrl.js"></script>
     <script src="js/app/app-landing.ctrl.js"></script>
@@ -57,6 +62,7 @@
     <script src="js/home/side-menu.ctrl.js"></script>
     <script src="js/home/select-location-ctrl.js"></script>
     <script src="js/home/project-search-ctrl.js"></script>
+    <script src="js/projects/review-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
