added property list

--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,7 @@
     <script src="js/home/select-location-ctrl.js"></script>
     <script src="js/home/project-search-ctrl.js"></script>
     <script src="js/projects/review-ctrl.js"></script>
+    <script src="js/projects/properties-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
