Refer a friend added

--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,9 @@
     <script src="js/home/project-search-ctrl.js"></script>
     <script src="js/projects/review-ctrl.js"></script>
     <script src="js/projects/properties-ctrl.js"></script>
+
+
+    <script src="js/user/refer-friend.js"></script>
 </head>
 
 <body ng-app="starter">
