--- a/www/index.html
+++ b/www/index.html
@@ -15,29 +15,30 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
+    <script src="lib/jquery-3.1.0.min/index.js" ></script>
     <!-- firebase includes -->
     <!-- firebase includes -->
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <script>
     // Initialize Firebase
-    // var config = {
-    //    apiKey: "AIzaSyD_4bPp5HKryXDzaQwfRhqAU5SsSAdDIJ0",
-    //    authDomain: "roofpik-948d0.firebaseapp.com",
-    //    databaseURL: "https://roofpik-948d0.firebaseio.com",
-    //    storageBucket: "roofpik-948d0.appspot.com",
-    // };
-    // firebase.initializeApp(config);
+    var config = {
+       apiKey: "AIzaSyD_4bPp5HKryXDzaQwfRhqAU5SsSAdDIJ0",
+       authDomain: "roofpik-948d0.firebaseapp.com",
+       databaseURL: "https://roofpik-948d0.firebaseio.com",
+       storageBucket: "roofpik-948d0.appspot.com",
+    };
+    firebase.initializeApp(config);
     </script>
     <script>
     // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyAek6CbWUct6QjJwoun0QKW8lvNxoB1hbQ",
-        authDomain: "roofpik-26701.firebaseapp.com",
-        databaseURL: "https://roofpik-26701.firebaseio.com",
-        storageBucket: "roofpik-26701.appspot.com",
-    };
-    firebase.initializeApp(config);
+    // var config = {
+    //     apiKey: "AIzaSyAek6CbWUct6QjJwoun0QKW8lvNxoB1hbQ",
+    //     authDomain: "roofpik-26701.firebaseapp.com",
+    //     databaseURL: "https://roofpik-26701.firebaseio.com",
+    //     storageBucket: "roofpik-26701.appspot.com",
+    // };
+    // firebase.initializeApp(config);
     </script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -66,7 +67,7 @@
     <script src="js/projects/properties-ctrl.js"></script>
 
 
-    <script src="js/user/refer-friend.js"></script>
+    <script src="js/user/refer.ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
