--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,7 @@
     <script src="js/home/project-search-ctrl.js"></script>
     <script src="js/projects/review-ctrl.js"></script>
     <script src="js/projects/properties-ctrl.js"></script>
-
+    <script src="js/projects/nearby.ctrl.js"></script>
 
     <script src="js/user/refer.ctrl.js"></script>
 </head>
