--- a/www/index.html
+++ b/www/index.html
@@ -25,23 +25,23 @@
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <script>
     // Initialize Firebase
-    var config = {
-       apiKey: "AIzaSyD_4bPp5HKryXDzaQwfRhqAU5SsSAdDIJ0",
-       authDomain: "roofpik-948d0.firebaseapp.com",
-       databaseURL: "https://roofpik-948d0.firebaseio.com",
-       storageBucket: "roofpik-948d0.appspot.com",
-    };
-    firebase.initializeApp(config);
-    </script>
-    <script>
-    // Initialize Firebase
     // var config = {
-    //     apiKey: "AIzaSyAek6CbWUct6QjJwoun0QKW8lvNxoB1hbQ",
-    //     authDomain: "roofpik-26701.firebaseapp.com",
-    //     databaseURL: "https://roofpik-26701.firebaseio.com",
-    //     storageBucket: "roofpik-26701.appspot.com",
+    //    apiKey: "AIzaSyD_4bPp5HKryXDzaQwfRhqAU5SsSAdDIJ0",
+    //    authDomain: "roofpik-948d0.firebaseapp.com",
+    //    databaseURL: "https://roofpik-948d0.firebaseio.com",
+    //    storageBucket: "roofpik-948d0.appspot.com",
     // };
     // firebase.initializeApp(config);
+    </script>
+    <script>
+    //Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyAek6CbWUct6QjJwoun0QKW8lvNxoB1hbQ",
+        authDomain: "roofpik-26701.firebaseapp.com",
+        databaseURL: "https://roofpik-26701.firebaseio.com",
+        storageBucket: "roofpik-26701.appspot.com",
+    };
+    firebase.initializeApp(config);
     </script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -74,6 +74,9 @@
     <script src="js/projects/nearby.ctrl.js"></script>
     <script src="js/user/refer.ctrl.js"></script>
     <script src="js/user/profile-ctrl.js"></script>
+
+    <script src="js/legal/terms-n-conditions-ctrl.js"></script>
+    <script src="js/legal/privacy-policy-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
