--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,7 @@
     <script src="js/app/under-construction-ctrl.js"></script>
     <script src="js/app/app-update-ctrl.js"></script>
     <script src="js/app/network.ctrl.js"></script>
+    <script src="js/app/bee-social.ctrl.js"></script>
     <script src="js/auth/authentication.service.js"></script>
     <script src="js/auth/login-ctrl.js"></script>
     <script src="js/auth/signup-ctrl.js"></script>
@@ -70,7 +71,6 @@
     <script src="js/projects/nearby.ctrl.js"></script>
     <script src="js/user/refer.ctrl.js"></script>
     <script src="js/user/profile-ctrl.js"></script>
-
     <script src="js/legal/terms-n-conditions-ctrl.js"></script>
     <script src="js/legal/privacy-policy-ctrl.js"></script>
     <script src="js/project-details/controller.js"></script>
