--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
     <script src="js/config.js"></script>
     <!-- Directives -->
     <script src="js/projects/project-rating-directive.js"></script>
-    <script src="js/projects/rating-directive.js"></script>
+    <script src="js/reviews/rating-directive.js"></script>
     <!-- Controllers -->
     <script src="js/app/app-start.ctrl.js"></script>
     <script src="js/app/app-landing.ctrl.js"></script>
@@ -73,11 +73,9 @@
     <script src="js/user/profile-ctrl.js"></script>
     <script src="js/legal/terms-n-conditions-ctrl.js"></script>
     <script src="js/legal/privacy-policy-ctrl.js"></script>
-    <script src="js/project-details/controller.js"></script>
-    <script src="lib/roundProgress/roundProgress.js"></script>
-    <script src="lib/ionic-rating/ionic-rating.min.js"></script>
-    <script src="js/filter/camelCaseToHuman.filter.js"></script>
-    <script src="js/service/project-details/service.js"></script>
+
+    <!-- Reviews -->
+    <script src="js/reviews/residential-review-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
