--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,10 @@
 
 
     <!-- Reviews -->
+
+    <script src="js/reviews/rating-directive.js"></script>
     <script src="js/reviews/residential-review-ctrl.js"></script>
+    <script src="js/reviews/commercial-review-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
