--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,8 @@
     <script src="js/reviews/rating-directive.js"></script>
     <script src="js/reviews/residential-review-ctrl.js"></script>
     <script src="js/reviews/commercial-review-ctrl.js"></script>
+    <script src="js/reviews/pg-review-ctrl.js"></script>
+    <script src="js/reviews/locality-review-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
