added word count

--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,7 @@
     <script src="js/reviews/commercial-review-ctrl.js"></script>
     <script src="js/reviews/pg-review-ctrl.js"></script>
     <script src="js/reviews/locality-review-ctrl.js"></script>
+    <script src="js/reviews/under-construction-review-ctrl.js"></script>
 </head>
 
 <body ng-app="starter">
